--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.7",
     "expo": "~48.0.4",
+    "expo-sqlite": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.3",
-    "@react-native-async-storage/async-storage": "1.17.11",
-    "expo-sqlite": "~11.1.1"
+    "react-native": "0.71.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
